# SFML_Tetris

./: CMakeLists.txt  Tetris.cbp  Tetris.depend
include/: asset_manager.h  button.h  figure.h  game_engine.h  sounds.h
sound/: main.cpp
source/: asset_manager.cpp  button.cpp  figure.cpp  game_engine.cpp  main.cpp  sounds.cpp
